--- a/Front_End/pages/reg_UserDashboard.html
+++ b/Front_End/pages/reg_UserDashboard.html
@@ -365,9 +365,8 @@
                 <div class="card info-card">
                     <!-- View Customer Details Table Start -->
                     <div class="row mt-1 mt-md-2 mt-lg-4 mm-2 p-2 justify-content-around">
-                        <div class="col-11 justify-content-around sectionBorder"
-                             style="height: 290px;">
-                            <div class="table-responsive customerTableDiv overflow-auto ">
+                        <div class="col-11 justify-content-around sectionBorder">
+                            <div class="table-responsive customerTableDiv overflow-auto" style="height: 290px;">
                                 <table class="table table-light table-striped table-bordered table-hover">
                                     <thead class="text-light table-dark text-center  table-bordered sticky-top">
                                     <tr>
