--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -25,7 +25,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-
 </head>
 <body>
   <!-- ======= Header ======= -->
@@ -467,13 +466,14 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/jQuery/jquery-3.6.1.min.js"></script>
+  <script src="assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js "></script>
+  <script src="assets/vendor/aos/aos.js "></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js "></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js "></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js "></script>
+  <script src="assets/vendor/php-email-form/validate.js "></script>
+  <script src="assets/vendor/jQuery/jquery-3.6.1.min.js "></script>
+  <script rel="script" src="assets/vendor/sweetalert2-11.6.16/sweetalert2.min.js"></script>
 
   <!-- Template Main JS File -->
   <script rel="script" src="assets/js/main.js"></script>
