--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <!-- ======= Header ======= -->
-  <header id="header" class="header fixed-top d-flex align-items-center">
+  <header id="header" class="header fixed-top d-flex align-items-center" style="background: #d5d5d5">
   <div class="container d-flex align-items-center justify-content-between">
 
     <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
@@ -39,8 +39,8 @@
         <li><a href="#">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#cars">Cars</a></li>
-        <li><a href="#contact">Contact</a></li>
         <li><a href="#Register-customer-new">Register</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <!-- .navbar -->
@@ -448,10 +448,10 @@
         <a class="nav-link text-light " href="#cars">Car</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text-light " href="#contact">Contact</a>
+        <a class="nav-link text-light " href="#Register-customer-new">Register</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text-light " href="#Register-customer-new">Register</a>
+        <a class="nav-link text-light " href="#contact">Contact</a>
       </li>
     </ul>
     <div class="container ">
